--- a/src/client/app/pages/group/overview/overview.html
+++ b/src/client/app/pages/group/overview/overview.html
@@ -1,6 +1,11 @@
 <section class="content-header">
   <h1> Group Overview <small>{{ groupInfo?.Name }}</small></h1>
 </section>
-<div class="chart-panel" #chartPanel>
+<div class="chart-panel" #chartPanel [class.hide]="!groupInfo?.Servers?.length">
 
 </div>
+<section class="content">
+  <div class="well well-sm" *ngIf="!groupInfo?.Servers?.length">
+    No servers.
+  </div>
+</section>
