improve gulp build process

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Humpback</title>
   <link rel="icon" href="static/images/favicon.ico" type="image/x-icon" />
+  <!-- build:css static/vendor/css/vendor.min.css -->
   <link rel="stylesheet" href="static/vendor/css/font-awesome.min.css">
   <link rel="stylesheet" href="static/vendor/css/bootstrap.min.css">
   <link rel="stylesheet" href="static/vendor/css/bootstrap-tagsinput.css">
@@ -16,19 +17,12 @@
   <link rel="stylesheet" href="static/vendor/css/spop.min.css">
   <link rel="stylesheet" href="static/vendor/css/highlight.css">
   <link rel="stylesheet" href="static/vendor/css/simplemde.min.css">
-  <script src="static/vendor/js/jquery.min.js"></script>
-  <script src="static/vendor/js/bootstrap.min.js"></script>
-  <script src="static/vendor/js/bootstrap-tagsinput.js"></script>
-  <script src="static/vendor/js/select2.min.js"></script>
-  <script src="static/vendor/js/lodash.min.js"></script>
-  <script src="static/vendor/js/moment.min.js"></script>
-  <script src="static/vendor/js/echarts.min.js"></script>
-  <script src="static/vendor/js/oboe-browser.js"></script>
-  <script src="static/vendor/js/spop.min.js"></script>
-  <script src="static/vendor/js/marked.js"></script>
-  <script src="static/vendor/js/highlight.pack.js"></script>
-  <script src="static/vendor/js/jquery.slimscroll.min.js"></script>
-  <script src="static/vendor/js/simplemde.min.js"></script>
+  <!-- endbuild -->
+  <!-- build:css static/css/site.min.css -->
+  <link rel="stylesheet" href="static/css/globalLoading.css">
+  <link rel="stylesheet" href="static/css/preloader.css">
+  <link rel="stylesheet" href="static/css/site.css">
+  <!-- endbuild -->
 </head>
 
 <body class="skin-green sidebar-mini fixed">
@@ -54,6 +48,24 @@
       <div></div>
     </div>
   </humpback-app>
+  <!-- build:js static/js/site.min.js -->
+  <script src="static/js/common.js"></script>
+  <!-- endbuild -->
+  <!-- build:js static/vendor/js/vendor.min.js -->
+  <script src="static/vendor/js/jquery.min.js"></script>
+  <script src="static/vendor/js/bootstrap.min.js"></script>
+  <script src="static/vendor/js/bootstrap-tagsinput.js"></script>
+  <script src="static/vendor/js/select2.min.js"></script>
+  <script src="static/vendor/js/lodash.min.js"></script>
+  <script src="static/vendor/js/moment.min.js"></script>
+  <script src="static/vendor/js/echarts.min.js"></script>
+  <script src="static/vendor/js/oboe-browser.js"></script>
+  <script src="static/vendor/js/spop.min.js"></script>
+  <script src="static/vendor/js/marked.js"></script>
+  <script src="static/vendor/js/highlight.pack.js"></script>
+  <script src="static/vendor/js/jquery.slimscroll.min.js"></script>
+  <script src="static/vendor/js/simplemde.min.js"></script>
+  <!-- endbuild -->
 </body>
 
 </html>
