fix a url's bug

--- a/src/client/app/pages/group/server/container-new/container-new.html
+++ b/src/client/app/pages/group/server/container-new/container-new.html
@@ -2,7 +2,7 @@
   <h1> New Container</h1>
   <ol class="breadcrumb">
     <li>
-      <a [routerLink]="['/group', groupId, ip, 'overview']"><i class="fa fa-th"></i> Container List</a>
+      <a [routerLink]="['/group', groupInfo.ID, ip, 'overview']"><i class="fa fa-th"></i> Container List</a>
     </li>
     <li class="active">New Container</li>
   </ol>
