--- a/src/client/app/pages/management/system-config/system-config.html
+++ b/src/client/app/pages/management/system-config/system-config.html
@@ -20,6 +20,10 @@
       </div>
     </div>
     <div class="form-group">
+      <label>Top news</label>
+      <input type="text" class="form-control" name="topNews" [(ngModel)]="config.TopNews" autocomplete="off" maxlength="500">
+    </div>
+    <div class="form-group">
       <button type="submit" class="btn btn-flat bg-olive">
         <i class="fa fa-save"></i> Save
       </button>
