--- a/src/client/index.html
+++ b/src/client/index.html
@@ -40,14 +40,12 @@
       <div class="sk-circle10 sk-child"></div>
       <div class="sk-circle11 sk-child"></div>
       <div class="sk-circle12 sk-child"></div>
-      <p class="loadingText">processing</p>
     </div>
   </div>
-  <humpback-app>
-    <div class="preloader">
-      <div></div>
-    </div>
-  </humpback-app>
+  <humpback-app></humpback-app>
+  <div class="preloader">
+    <div></div>
+  </div>
   <!-- build:js static/js/site.min.js -->
   <script src="static/js/common.js"></script>
   <!-- endbuild -->
