--- a/src/client/app/pages/management/system-config/system-config.html
+++ b/src/client/app/pages/management/system-config/system-config.html
@@ -20,6 +20,14 @@
       </div>
     </div>
     <div class="form-group">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" name="enableClusterMode" [(ngModel)]="config.EnableClusterMode">
+          <b>Enable Cluster Mode</b>
+        </label>
+      </div>
+    </div>
+    <div class="form-group">
       <label>Top news</label>
       <input type="text" class="form-control" name="topNews" [(ngModel)]="config.TopNews" autocomplete="off" maxlength="500">
     </div>
