--- a/src/client/app/pages/management/system-config/system-config.html
+++ b/src/client/app/pages/management/system-config/system-config.html
@@ -10,21 +10,25 @@
           <b>Enabel Private Registry</b>
         </label>
       </div>
-      <div class="input-group">
-        <span class="input-group-addon">http(s)://</span>
-        <input type="text" class="form-control" name="privateRegistry" #privateRegistryInput="ngModel" [(ngModel)]="config.PrivateRegistry"
-          [attr.disabled]="config.EnablePrivateRegistry ? null : 'disabled'" autocomplete="off" required>
-      </div>
+      <input type="text" class="form-control" name="privateRegistry" #privateRegistryInput="ngModel" [(ngModel)]="config.PrivateRegistry"
+        [attr.disabled]="config.EnablePrivateRegistry ? null : 'disabled'" autocomplete="off" required pattern="https?://.+">
       <div *ngIf="form.submitted && config.EnablePrivateRegistry && privateRegistryInput.invalid">
         <span class="help-block" *ngIf="privateRegistryInput.errors.required">Private registry address is required.</span>
+        <span class="help-block" *ngIf="privateRegistryInput.errors.pattern">Invalid URL.</span>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" [class.has-error]="form.submitted && config.EnableClusterMode && humpbackCenterAPIInput.invalid">
       <div class="checkbox">
         <label>
           <input type="checkbox" name="enableClusterMode" [(ngModel)]="config.EnableClusterMode">
           <b>Enable Cluster Mode</b>
         </label>
+      </div>
+      <input type="text" class="form-control" name="humpbackCenterAPI" #humpbackCenterAPIInput="ngModel" [(ngModel)]="config.HumpbackCenterAPI"
+        [attr.disabled]="config.EnableClusterMode ? null : 'disabled'" autocomplete="off" required pattern="https?://.+">
+      <div *ngIf="form.submitted && config.EnableClusterMode && humpbackCenterAPIInput.invalid">
+        <span class="help-block" *ngIf="humpbackCenterAPIInput.errors.required">HumpbackCenterAPI address is required.</span>
+        <span class="help-block" *ngIf="humpbackCenterAPIInput.errors.pattern">Invalid URL.</span>
       </div>
     </div>
     <div class="form-group">
